Update pytest (fixes 37)

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,4 +27,4 @@ jobs:
         uses: paolorechia/fast-pytest-github-action@develop
         with:
           pytest_args: '.'
-          requirements_file: 'test-requirements.txt'
+          requirements_file: 'test-requirements-workflow.txt'
