--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -1,8 +1,25 @@
-name: Flake8 check
-on: [push]
+name: Code Quality
+
+on:
+  push:
+    paths:
+      - "**.py"
+
 jobs:
-  Flake8:
+  lint:
+    name: Python Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Flake8 action
-        uses: suo/flake8-github-action@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: Run flake8
+        uses: julianwachholz/flake8-action@v2
+        with:
+          checkName: "Python Lint"
+          path: path/to/files
+          plugins: flake8-spellcheck
+          config: path/to/flake8.ini
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
