--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -24,3 +24,6 @@ jobs:
           checkName: 'flake8_py3'   # NOTE: this needs to be the same as the job name
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Flake8 action
+        uses: suo/flake8-github-action@v1
+
