--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -2,19 +2,8 @@ name: Flake8
 on: [push]
 jobs:
   lint:
-    name: Python Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: Run flake8
-        uses: julianwachholz/flake8-action@v2
-        with:
-          checkName: "Python Lint"
-          path: path/to/files
-          plugins: flake8-spellcheck
-          config: path/to/flake8.ini
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: GitHub Action for Flake8
+        uses: cclauss/GitHub-Action-for-Flake8@v0.5.0
+
