--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,30 +1,34 @@
-name: Pytest Passing Tests
+- name: GitHub Action for pytest
+  uses: cclauss/GitHub-Action-for-pytest@0.5.0
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  testeo:
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Pytest Action Step
-        id: pytest
-        uses: paolorechia/fast-pytest-github-action@develop
-        with:
-          pytest_args: '.'
-          requirements_file: 'test-requirements.txt'
+#name: Pytest Passing Tests
+#
+## Controls when the workflow will run
+#on:
+#  # Triggers the workflow on push or pull request events but only for the master branch
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+#
+#
+## A workflow run is made up of one or more jobs that can run sequentially or in parallel
+#jobs:
+#  # This workflow contains a single job called "build"
+#  testeo:
+#    runs-on: ubuntu-latest
+#
+#    # Steps represent a sequence of tasks that will be executed as part of the job
+#    steps:
+#      - uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.8'
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - name: Pytest Action Step
+#        id: pytest
+#        uses: paolorechia/fast-pytest-github-action@develop
+#        with:
+#          pytest_args: '.'
+#          requirements_file: 'test-requirements.txt'
+#
