Update/correction  SAST.yml (fixes #36)

--- a/.github/workflows/SAST.yml
+++ b/.github/workflows/SAST.yml
@@ -1,12 +1,6 @@
 
 name: Bandit
-on:
-  push:
-    paths:
-      - 
-    branches: 
-      - main
-        
+on: [push]     
 jobs:
   analyze:
     runs-on: ubuntu-latest
