--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,9 +29,10 @@ jobs:
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
+          pip install -r requirements.txt
+          pip install -r test-requirements.txt
+          pip install -e
           pipenv install --deploy --dev
-          pipenv install -r requirements.txt
-          pipenv install -r test-requirements.txt
       - name: Run test suite
         run: |
           pipenv run test -v
