--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
+          pipenv install --python 3.8
           pip install -r requirements.txt
           pip install -r test-requirements.txt
           pip install -e
