--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,14 +29,15 @@ jobs:
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
-          pipenv install --python 3.8
+          python -m pip install --python 3.8
           pip install -r requirements.txt
           pip install -r test-requirements.txt
           pip install -e
-          pipenv install --deploy --dev
+          #pipenv install --deploy --dev
       - name: Run test suite
         run: |
-          pipenv run test -v
+          python -m pytest --import-mode=append tests/
+          #pipenv run test -v
 
 #- name: GitHub Action for pytest
 #  uses: cclauss/GitHub-Action-for-pytest@0.5.0
