--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,10 +29,10 @@ jobs:
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
-          python -m pip install --python-version 3.8
-          pip install -r requirements.txt
-          pip install -r test-requirements.txt
-          pip install -e
+          #python -m pip install --python-version 3.8
+          pip3.8 install -r requirements.txt
+          pip3.8 install -r test-requirements.txt
+          pip3.8 install -e
           #pipenv install --deploy --dev
       - name: Run test suite
         run: |
