--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
-          #python -m pip install --python-version 3.8
+          #python -m pip install --python-version 3.8 -
           pip3.8 install -r requirements.txt
           pip3.8 install -r test-requirements.txt
           pip3.8 install -e
