--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,9 +30,9 @@ jobs:
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           #python -m pip install --python-version 3.8 -
-          pip3.8 install -r requirements.txt
-          pip3.8 install -r test-requirements.txt
-          pip3.8 install -e
+          pip install -r requirements.txt
+          pip install -r test-requirements.txt
+          pip3 install -e
           #pipenv install --deploy --dev
       - name: Run test suite
         run: |
