--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,14 +30,14 @@ jobs:
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           #python -m pip install --python-version 3.8 -
-          pip install -r requirements.txt
-          pip install -r test-requirements.txt
-          pip install -e
-          #pipenv install --deploy --dev
+          pipenv install -r requirements.txt
+          pipenv install -r test-requirements.txt
+          #pip install -e
+          pipenv install --deploy --dev
       - name: Run test suite
         run: |
-          python -m pytest --import-mode=append tests/
-          #pipenv run test -v
+          #python -m pytest --import-mode=append tests/
+          pipenv run test -v
 
 #- name: GitHub Action for pytest
 #  uses: cclauss/GitHub-Action-for-pytest@0.5.0
